# tcn-cvae-trajectory-forecasting

./: .gitignore  README.md  pixi.toml  pyproject.toml  requirements.txt
data_processing/: file1.py  file2.py  file3.py  graphs.py
scripts/: download_datasets.py  train.py  validate.py  verify_cuda.py
src/trajectory_vae_forecasting/: __init__.py  dataset.py  model.py  utils.py
src/trajectory_vae_forecasting/models/: __init__.py  cvae_decoder.py  forecaster.py  losses.py  tcn_blocks.py  tcn_encoder.py
